<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/welcomeBannerImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/examplebackground"/>
        <TextView
            android:id="@+id/welcomeBanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/banner_desc"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:text="Welcome!"
            android:textStyle="bold"
            android:shadowColor="#ffffff"
            android:shadowRadius="10"

            />
    </RelativeLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">
        <Button
            android:id="@+id/itinerary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/itin_button"
            android:backgroundTint="#1f3c5a"
            android:textColor="#eeeeee"
            />
        <Button
            android:id="@+id/nearby"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nearby_button"
            android:backgroundTint="#ffaa00"/>
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/translator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#9999ff"
            android:text="@string/trans_button" />

        <Button
            android:id="@+id/currency"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#b37700"
            android:text="@string/exch_button"
            android:textColor="#eeeeee" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/refresh"
                android:textColor="#eeeeee"
                android:backgroundTint="#222222"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/settings"
                android:backgroundTint="#dddddd"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>